Implement /admin API
